[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plutopy"
version = "0.3.0"
description = "PLUTO (ECSS-E-ST-70-32C) spacecraft-operations DSL to Python transpiler and runtime"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sokratis Tzifkas" }]
keywords = ["pluto", "ecss", "space", "dsl", "transpiler", "lark", "parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "lark>=1.0",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=7", "rich>=13", "pygments>=2.0"]
tui = ["rich>=13"]
highlight = ["pygments>=2.0"]
docs = ["mkdocs>=1.5", "pygments>=2.0"]

[project.scripts]
plutopy = "plutopy.cli:main"

[project.entry-points."pygments.lexers"]
pluto = "plutopy.pygments_lexer:PlutoLexer"

[project.urls]
Homepage      = "https://github.com/stzifkas/PLUTOpython"
Repository    = "https://github.com/stzifkas/PLUTOpython"
Documentation = "https://stzifkas.github.io/PLUTOpython/"
Playground    = "https://stzifkas.github.io/PLUTOpython/playground/"
Issues        = "https://github.com/stzifkas/PLUTOpython/issues"
Changelog     = "https://github.com/stzifkas/PLUTOpython/releases"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plutopy = ["grammar.lark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
